==> kolbik/stand_eth_to_rs485/Src/ENC28J60.c <==
#include <ENC28J60.h>
#include <MAC.h>
#include <StackTsk.h>
#include "stm32f0xx_hal.h"
#include <string.h>

BYTE MACGet()
{
	BYTE Result;
	uint8_t tx_data;
	uint8_t rx_data;

	HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_RESET);

	tx_data = RBM;
	HAL_SPI_Transmit(&hspi1, &tx_data, 1, 100);


	tx_data = 0;
	HAL_SPI_TransmitReceive(&hspi1, &tx_data, &rx_data, 1, 100);

	Result = rx_data;

	HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_SET);

	return Result;
}

WORD MACGetArray(BYTE *val, WORD len)
{
	WORD i;
	uint8_t tx_data[2];
	uint8_t rx_data;
    __IO uint32_t tmpreg_ovr;

	// Start the burst operation
	HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_RESET);
	tx_data[0] = RBM;

	HAL_SPI_Transmit(&hspi1, &tx_data[0], 1, 100);

	//*((__IO uint8_t *)&SPI1->DR)	=	*((uint16_t *)&tx_data[0]);
	//while ((SPI1->SR & SPI_FLAG_FTLVL) != SPI_FTLVL_EMPTY) {}
	//while ((SPI1->SR & SPI_FLAG_BSY) != RESET) {}
    //tmpreg_ovr = SPI1->DR;
    //tmpreg_ovr = SPI1->SR;

	HAL_SPI_TransmitReceive(&hspi1, &tx_data[0], val, len, 100);
#if 0
	i = 0;		
	val--;

	// Read the data
	while(i<len)
	{
		i++;
		if(val)
		{
			val++;
			tx_data[0] = 0;
			HAL_SPI_TransmitReceive(&hspi1, &tx_data[0], &rx_data, 1, 100);
#if 0
		    /* set fiforxthreshold according the reception data length: 8bit */
		    SET_BIT(hspi->Instance->CR2, SPI_RXFIFO_THRESHOLD);
		    *(__IO uint8_t *)&hspi->Instance->DR = (*pTxData++);
		      /* Wait until RXNE flag is reset */
		      if ((hspi->RxXferCount > 0U) && (__HAL_SPI_GET_FLAG(hspi, SPI_FLAG_RXNE))) {
		    (*(uint8_t *)pRxData++) = *(__IO uint8_t *)&hspi->Instance->DR;
		      }
		  	while ((SPI1->SR & SPI_FLAG_FTLVL) != SPI_FTLVL_EMPTY) {}
		  	while ((SPI1->SR & SPI_FLAG_BSY) != RESET) {}
#endif
			*val = rx_data;
		}
	};
#endif
	// Terminate the burst operation
	HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_SET);

	return i;
}

void MACPut(BYTE val)
{
	uint8_t tx_data[2];

	HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_RESET);

	tx_data[0] = WBM;		// Send the opcode and constant.
	tx_data[1] = val;		// Send the byte to be writen.
	HAL_SPI_Transmit(&hspi1, &tx_data[0], 2, 100);

	HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_SET);
}

void MACPutArray(BYTE *val, WORD len)
{
	uint8_t tx_data;

	// Select the chip and send the proper opcode
	HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_RESET);

	tx_data = WBM;		// Send the Write Buffer Memory opcode
	HAL_SPI_Transmit(&hspi1, &tx_data, 1, 100);


	HAL_SPI_Transmit(&hspi1, val, len, 100);

#if 0
	// Send the data
	while(len)
	{
		tx_data = *val;	// Start sending the byte
		val++;				// Increment after writing to ENC_SSPBUF to increase speed
		len--;				// Decrement after writing to ENC_SSPBUF to increase speed
		HAL_SPI_Transmit(&hspi1, &tx_data, 1, 100);
	};
#endif
	// Terminate the burst operation
	HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_SET);
}

static void SendSystemReset(void)
{
	uint8_t tx_data;
	HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_RESET);
	tx_data = SRESET;
	HAL_SPI_Transmit(&hspi1, &tx_data, 1, 100);
	HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_SET);
}

static REG ReadETHReg(BYTE Address)
{
	uint8_t tx_data;
	uint8_t rx_data;
	REG r;

	// Select the chip and send the Read Control Register opcode/address
	HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_RESET);

	tx_data = RCR | Address;
	HAL_SPI_Transmit(&hspi1, &tx_data, 1, 100);

	tx_data = 0;
	HAL_SPI_TransmitReceive(&hspi1, &tx_data, &rx_data, 1, 100);

	r.Val = rx_data;

	HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_SET);

	return r;
}

static REG ReadETHReg(BYTE Address)
{
	uint8_t tx_data[2];
	//uint8_t rx_data;
	REG r;
    __IO uint32_t tmpreg_ovr;

	// Select the chip and send the Read Control Register opcode/address
	//HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_RESET);
	CS_ENC_GPIO_Port->BRR = (uint32_t)CS_ENC_Pin;

	tx_data[0] = RCR | Address;
	tx_data[1] = 0;

	SET_BIT(SPI1->CR2, SPI_RXFIFO_THRESHOLD);

	SPI1->DR	=	*((uint16_t *)tx_data);

	while ((SPI1->SR & SPI_FLAG_FTLVL) != SPI_FTLVL_EMPTY) {}

	while ((SPI1->SR & SPI_FLAG_BSY) != RESET) {}

	while ((SPI1->SR & SPI_FLAG_FRLVL) != SPI_FRLVL_EMPTY)
	{
	    tmpreg_ovr = SPI1->DR;
	    //tmpreg_ovr = SPI1->SR;
	}


//##############################
#if 0
    /* set fiforxthreshold according the reception data length: 8bit */
    SET_BIT(hspi->Instance->CR2, SPI_RXFIFO_THRESHOLD);
    *(__IO uint8_t *)&hspi->Instance->DR = (*pTxData++);
      /* Wait until RXNE flag is reset */
      if ((hspi->RxXferCount > 0U) && (__HAL_SPI_GET_FLAG(hspi, SPI_FLAG_RXNE))) {
    (*(uint8_t *)pRxData++) = *(__IO uint8_t *)&hspi->Instance->DR;
      }
  	while ((SPI1->SR & SPI_FLAG_FTLVL) != SPI_FTLVL_EMPTY) {}
  	while ((SPI1->SR & SPI_FLAG_BSY) != RESET) {}
#endif
//##############################

	r.Val = tmpreg_ovr; //rx_data[1];
    tmpreg_ovr = SPI1->DR;
    tmpreg_ovr = SPI1->SR;
	//HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_SET);
	CS_ENC_GPIO_Port->BSRR = (uint32_t)CS_ENC_Pin;

	return r;
}

static REG ReadMACReg(BYTE Address)
{
	uint8_t tx_data;
	uint8_t rx_data;

	REG r;

	HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_RESET);

	tx_data = RCR | Address;	// Send the Read Control Register opcode and
	HAL_SPI_Transmit(&hspi1, &tx_data, 1, 100);

	tx_data = 0;				// Send a dummy byte
	HAL_SPI_Transmit(&hspi1, &tx_data, 1, 100);


	tx_data = 0;				// Send another dummy byte to receive the register
	HAL_SPI_TransmitReceive(&hspi1, &tx_data, &rx_data, 1, 100);

	r.Val = rx_data;

	HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_SET);

	return r;
}

static void WriteReg(BYTE Address, BYTE Data)
{		
	uint8_t tx_data[2];

	CS_ENC_GPIO_Port->BRR = (uint32_t)CS_ENC_Pin;
	//HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_RESET);

	tx_data[0] = WCR | Address;		// Send the opcode and address.
	tx_data[1] = Data;				// Send the byte to be writen.
	//HAL_SPI_Transmit(&hspi1, &tx_data[0], 2, 50);

	SPI1->DR	=	*((uint16_t *)tx_data);

	while ((SPI1->SR & SPI_FLAG_FTLVL) != SPI_FTLVL_EMPTY)
	{

	}

	while ((SPI1->SR & SPI_FLAG_BSY) != RESET)
	{

	}

    __IO uint32_t tmpreg_ovr;
    tmpreg_ovr = SPI1->DR;
    tmpreg_ovr = SPI1->SR;

	CS_ENC_GPIO_Port->BSRR = (uint32_t)CS_ENC_Pin;
	//HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_SET);
}

static void BFCReg(BYTE Address, BYTE Data)
{
	uint8_t tx_data[2];

	CS_ENC_GPIO_Port->BRR = (uint32_t)CS_ENC_Pin;
	//HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_RESET);

	tx_data[0] = BFC | Address;		// Send the opcode and address.
	tx_data[1] = Data;				// Send the byte to be writen.
	//HAL_SPI_Transmit(&hspi1, &tx_data[0], 2, 50);

	SPI1->DR	=	*((uint16_t *)tx_data);

	while ((SPI1->SR & SPI_FLAG_FTLVL) != SPI_FTLVL_EMPTY)
	{

	}

	while ((SPI1->SR & SPI_FLAG_BSY) != RESET)
	{

	}

    __IO uint32_t tmpreg_ovr;
    tmpreg_ovr = SPI1->DR;
    tmpreg_ovr = SPI1->SR;

	CS_ENC_GPIO_Port->BSRR = (uint32_t)CS_ENC_Pin;
	//HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_SET);
}

static void BFSReg(BYTE Address, BYTE Data)
{
	uint8_t tx_data[2];

	CS_ENC_GPIO_Port->BRR = (uint32_t)CS_ENC_Pin;
	//HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_RESET);

	tx_data[0] = BFS | Address;		// Send the opcode and address.
	tx_data[1] = Data;				// Send the byte to be writen.
	//HAL_SPI_Transmit(&hspi1, &tx_data[0], 2, 50);

	SPI1->DR	=	*((uint16_t *)tx_data);

	while ((SPI1->SR & SPI_FLAG_FTLVL) != SPI_FTLVL_EMPTY)
	{

	}

	while ((SPI1->SR & SPI_FLAG_BSY) != RESET)
	{

	}

    __IO uint32_t tmpreg_ovr;
    tmpreg_ovr = SPI1->DR;
    tmpreg_ovr = SPI1->SR;

	CS_ENC_GPIO_Port->BSRR = (uint32_t)CS_ENC_Pin;
	//HAL_GPIO_WritePin(CS_ENC_GPIO_Port, CS_ENC_Pin, GPIO_PIN_SET);
}
