==> kekovski/MSP430/Code/TFTPboot/ENC28J60.c <==
#define __ENC28J60_C
#include "HardwareProfile.h"
#include "ENC28J60.h"
#include "ipstack/TCPIP.h"
#define FULL_DUPLEX
#define LOW(a)                  ((a) & 0xFF)
#define HIGH(a)                 (((a)>>8) & 0xFF)
#define WCR (0x2<<5)            // Write Control Register command
#define BFS (0x4<<5)            // Bit Field Set command
#define BFC (0x5<<5)            // Bit Field Clear command
#define RCR (0x0<<5)            // Read Control Register command
#define RBM ((0x1<<5) | 0x1A)   // Read Buffer Memory command
#define WBM ((0x3<<5) | 0x1A)   // Write Buffer Memory command
#define SR  ((0x7<<5) | 0x1F)   // System Reset command does not use an address.
#define ENC_MAX_SPI_FREQ    (20000000ul)    // Hz
#define ETHER_IP    (0x00u)
#define ETHER_ARP   (0x06u)
#define spiWrite			spi_rw
#define spiRead()			spi_rw(0)

BYTE MACGet() {
	BYTE data;

	ETH_CS_OUT &= ~ETH_CS;

    // Send the Read Buffer Memory opcode
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = RBM;
    while(!(UCB0IFG & UCRXIFG));
    data = UCB0RXBUF;

    // Send a dummy byte to read the RAM byte pointed by ERDPT
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = 0;
    while(!(UCB0IFG & UCRXIFG));
    data = UCB0RXBUF;

	ETH_CS_OUT |= ETH_CS;

	return data;

}

WORD MACGetArray(BYTE *val, WORD len) {
	WORD i = len;
	volatile BYTE Dummy;

	ETH_CS_OUT &= ~ETH_CS;

	// Send the Read Buffer Memory opcode
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = RBM;
    while(!(UCB0IFG & UCRXIFG));
    Dummy = UCB0RXBUF;

    // Read the amount of bytes specified by len
    while(i--){
        while(!(UCB0IFG & UCTXIFG));
        UCB0TXBUF = 0;
        while(!(UCB0IFG & UCRXIFG));
        *val++ = UCB0RXBUF;
    }

	ETH_CS_OUT |= ETH_CS;

	return len;

}

void MACPut(BYTE val) {
	volatile BYTE Dummy;

	ETH_CS_OUT &= ~ETH_CS;

    // Send the Write Buffer Memory opcode
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = WBM;
    while(!(UCB0IFG & UCRXIFG));
    Dummy = UCB0RXBUF;

    // Send the byte to be written
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = val;
    while(!(UCB0IFG & UCRXIFG));
    Dummy = UCB0RXBUF;

	ETH_CS_OUT |= ETH_CS;

}

void MACPutArray(BYTE *val, WORD len) {
	volatile BYTE Dummy;

    ETH_CS_OUT = ~ETH_CS;

    // Send the Write Buffer Memory opcode
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = WBM;
    while(!(UCB0IFG & UCRXIFG));
    Dummy = UCB0RXBUF;

    // Send the bytes to be written
    while(len){
        while(!(UCB0IFG & UCTXIFG));
        UCB0TXBUF = *val;
        val++;
        len--;
        while(!(UCB0IFG & UCRXIFG));
        Dummy = UCB0RXBUF;
    }

	ETH_CS_OUT |= ETH_CS;
}

static void SendSystemReset(void){
    volatile BYTE Dummy;

    // Note: The power save feature may prevent the reset from executing, so
    // we must make sure that the device is not in power save before issuing
    // a reset.
    BFCReg(ECON2, ECON2_PWRSV);

    // Give some opportunity for the regulator to reach normal regulation and
    // have all clocks running
    _delay_cycles(8000); //-> Delay 1ms with a 8Mhz CPU clock

    // Send the System Reset opcode
    ETH_CS_OUT = ~ETH_CS;
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = SR;
    while(!(UCB0IFG & UCRXIFG));
    Dummy = UCB0RXBUF;
    ETH_CS_OUT |= ETH_CS;

    // Wait for the oscillator start up timer and PHY to become ready
    _delay_cycles(8000); //-> Delay 1ms with a 8Mhz CPU clock
}

REG ReadETHReg(BYTE Address) {
    REG r;

    ETH_CS_OUT = ~ETH_CS;

    // Send the Read Control Register opcode and address
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = RCR | Address;
    while(!(UCB0IFG & UCRXIFG));
    r.Val = UCB0RXBUF;

    // Send a dummy byte to receive the register contents
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = 0;
    while(!(UCB0IFG & UCRXIFG));
    r.Val = UCB0RXBUF;

    ETH_CS_OUT |= ETH_CS;

    return r;

}

static REG ReadMACReg(BYTE Address) {
    REG r;

    ETH_CS_OUT = ~ETH_CS;

    // Send the Read Control Register opcode and address
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = RCR | Address;
    while(!(UCB0IFG & UCRXIFG));
    r.Val = UCB0RXBUF;

    //Send a dummy byte to receive the dummy byte that the ENC28J60 transmits before a MAC register content
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = 0;
    while(!(UCB0IFG & UCRXIFG));
    r.Val = UCB0RXBUF;

    // Send another dummy byte to receive the real MAC register contents
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = 0;
    while(!(UCB0IFG & UCRXIFG));
    r.Val = UCB0RXBUF;

    ETH_CS_OUT |= ETH_CS;

    return r;

}

static void WriteReg(BYTE Address, BYTE Data) {
	volatile BYTE Dummy;

    ETH_CS_OUT = ~ETH_CS;

    // Send the Write Control Register opcode and address
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = WCR | Address;
    while(!(UCB0IFG & UCRXIFG));
    Dummy = UCB0RXBUF;

    // Send the byte to be written
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = Data;
    while(!(UCB0IFG & UCRXIFG));
    Dummy = UCB0RXBUF;

    ETH_CS_OUT |= ETH_CS;
}

static void BFCReg(BYTE Address, BYTE Data) {
	volatile BYTE Dummy;

    ETH_CS_OUT = ~ETH_CS;

    // Send the Bit Field Clear opcode and address
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = BFC | Address;
    while(!(UCB0IFG & UCRXIFG));
    Dummy= UCB0RXBUF;

    // Send the byte to be written
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = Data;
    while(!(UCB0IFG & UCRXIFG));
    Dummy = UCB0RXBUF;

    ETH_CS_OUT |= ETH_CS;
}

static void BFSReg(BYTE Address, BYTE Data) {
	volatile BYTE Dummy;

    ETH_CS_OUT = ~ETH_CS;

    // Send the Bit Field Set opcode and address
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = BFS | Address;
    while(!(UCB0IFG & UCRXIFG));
    Dummy = UCB0RXBUF;

    // Send the byte to be written
    while(!(UCB0IFG & UCTXIFG));
    UCB0TXBUF = Data;
    while(!(UCB0IFG & UCRXIFG));
    Dummy = UCB0RXBUF;

    ETH_CS_OUT |= ETH_CS;
}
